# ccstreams

./: INSTALL  README  README.md  configure.ac
include/: Makefile.am
include/ccstreams/: ccstreams.h  copy.h  ecx_ccsteams.h  ecx_copy.h  ecx_mem.h  ecx_str.h  mem.h  str.h
src/: Makefile.am  copy.c  ecx_copy.c  ecx_mem.c  ecx_str.c  mem.c  str.c
test/: Makefile.am
test/check/: Makefile.am  mem.c  str.c
test/example/: Makefile.am  str.c
